[package]
name = "images_effect_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]  # Enables building a WebAssembly dynamic library

[dependencies]
wasm-bindgen = "0.2.84" # Enables communication between Rust and JavaScript
base64 = "0.21.0"
image = "0.24.6"

[dependencies.web-sys] # Enables using Web APIs
version = "0.3.50"
features = ["console"]

